--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -19,10 +19,12 @@
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
-    "@mui/x-charts": "^7.0.0",
+    "@mui/x-charts": "^7.1.0",
+    "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -31,11 +33,12 @@
     "react-loader-spinner": "^6.1.6",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
