--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.1.0",
     "@mui/x-date-pickers": "^7.1.0",
@@ -26,6 +27,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
